# hidpipe

./: Cargo.toml  README.md
etc/systemd/user/: hidpipe.service  hidpipe.socket
hidpipe-client/: Cargo.toml
hidpipe-client/src/: main.rs
hidpipe-server/: Cargo.toml
hidpipe-server/src/: main.rs
hidpipe-shared/: Cargo.toml
hidpipe-shared/src/: lib.rs
src/: client.rs  server.rs
