[workspace]
resolver = "2"
members = ["hidpipe-server", "hidpipe-shared", "hidpipe-client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pass hid devices to micro vms."

[workspace.dependencies]
input-linux = { git = "https://github.com/WhatAmISupposedToPutHere/input-linux-rs" }
input-linux-sys = { git = "https://github.com/WhatAmISupposedToPutHere/input-linux-sys-rs" }
nix = { version = "0.29", features = ["event", "socket"] }
libc = "0.2"
