[workspace]
resolver = "2"
members = ["hidpipe-server", "hidpipe-shared", "hidpipe-client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pass hid devices to micro vms."

[workspace.dependencies]
input-linux = "0.7"
input-linux-sys = "0.9"
nix = { version = "0.29", features = ["event", "socket", "user"] }
libc = "0.2"
