[package]
name = "hidpipe-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }

[dependencies]
hidpipe-shared = "0.1.0"
input-linux = { workspace = true }
input-linux-sys = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
posix-acl = "1"
