[package]
name = "hidpipe-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }

[dependencies]
udev = "0.8"
hidpipe-shared = { path = "../hidpipe-shared" }
input-linux = { workspace = true }
input-linux-sys = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
